<resources>
    <string name="app_name">RateMe</string>

    <string name="username_label">Email</string>
    <string name="password_label">Password</string>
    <string name="password_repeat_label">Repeat Password</string>
    <string name="login_btn">Sign in</string>
    <string name="register_btn">Sign up</string>
    <string name="register_if_not">You still don\'t have an account? Sign up here</string>
    <string name="register_successful">You are registered successfully</string>
    <string name="register_title">User registration</string>
    <string name="register_not_matching_passwords">Both passwords don\'t match. Please check them again.</string>
    <string name="register_missing_repeat">Please repeat your password.</string>
    <string name="register_missing_pass">Please enter a password.</string>
    <string name="register_missing_email">Please enter your email.</string>
    <string name="login_missing_email">Please enter your email.</string>
    <string name="login_missing_password">Please enter your password.</string>
    <string name="login_title">Sign in</string>

    <string name="title_my_requests">My requests</string>
    <string name="title_received">Received requests</string>

    <string name="dialog_add_request_title">New request</string>
    <string name="dialog_add_request_cur_label">Current hour rate</string>
    <string name="dialog_add_request_des_label">Desired hour rate</string>
    <string name="dialog_add_request_recipients_label">Recipients</string>
    <string name="dialog_add_request_comment_label">Comment</string>
    <string name="dialog_add_request_cancel_label">Cancel</string>
    <string name="dialog_add_request_save_label">Save</string>
    <string name="dialog_add_request_no_desired_rate">Please enter your desired hour rate before submitting</string>
    <string name="dialog_add_request_no_current_rate">Please enter your current hour rate before submitting</string>
    <string name="dialog_add_request_no_recipients">Please enter the recipients of your request before submitting</string>
    <string name="dialog_add_request_error_title">Warning</string>

    <string name="fragment_my_requests_no_items">No requests available yet</string>
    <string name="fragment_my_requests_item_button_title">View answers</string>
    <string name="fragment_my_requests_no_answers">There are still no answers for this request.</string>
    <string name="fragment_my_requests_no_answers_title">Warning</string>

    <string name="dialog_list_answers_from">From:</string>
    <string name="dialog_list_answers_content">Content:</string>

    <string name="fragment_received_requests_add_answer_btn">Add answer</string>
    <string name="fragment_received_requests_view_answer_btn">View answer</string>
    <string name="fragment_received_requests_view_answer_title">Your answer</string>
    <string name="fragment_received_requests_no_items">No received requests yet</string>

    <string name="dialog_add_answer_title">Your answer</string>
    <string name="dialog_add_answer_error_title">Warning</string>
    <string name="dialog_add_answer_nothing">Please enter your answer before saving</string>

</resources>
