<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/title_view"
        android:text="@string/dialog_add_request_title"
        android:textSize="@dimen/warn_dialog_title_text_size"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="11">

        <TextView
            android:id="@+id/current_rate_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_request_cur_label"
            android:layout_weight="7"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/new_request_dialog_text_size"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/input_field_height"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:gravity="right"
            android:id="@+id/current_rate"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="€"
            android:gravity="center"
            android:textSize="@dimen/new_request_dialog_euro_sign_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="11">

        <TextView
            android:id="@+id/desired_rate_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_request_des_label"
            android:layout_weight="7"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/new_request_dialog_text_size"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/input_field_height"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:gravity="right"
            android:id="@+id/desired_rate"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="€"
            android:gravity="center"
            android:textSize="@dimen/new_request_dialog_euro_sign_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/recipients_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_request_recipients_label"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/new_request_dialog_text_size"
            android:layout_marginBottom="10dp"/>

        <com.angelova.w510.rateme.CustomMultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_weight="4"
            android:background="@drawable/dark_border"
            android:padding="5dp"
            android:id="@+id/recipients"
            android:completionThreshold="1"
            android:inputType="textMultiLine"
            android:gravity="top|start"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_request_comment_label"
            android:textSize="@dimen/new_request_dialog_text_size"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_request_dialog_multiline_edit_height"
            android:background="@drawable/dark_border"
            android:layout_weight="8"
            android:padding="5dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textColor="@color/colorPrimary"
            android:id="@+id/comment"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/warn_dialog_button_height"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/warn_dialog_button_height"
            android:layout_weight="1"
            android:text="@string/dialog_add_request_cancel_label"
            android:gravity="center"
            android:textSize="@dimen/warn_dialog_buttons_text_size"
            android:textColor="@color/colorPrimary"
            android:id="@+id/cancel_button"
            android:background="@color/colorAccent"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/warn_dialog_button_height"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/dialog_add_request_save_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/warn_dialog_buttons_text_size" />
    </LinearLayout>



</LinearLayout>