<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp">

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.2"
        android:id="@+id/guideline_left"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/guideline_right"
        android:orientation="vertical" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/title_view"
        android:text="@string/dialog_add_answer_title"
        android:textSize="@dimen/warn_dialog_title_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toLeftOf="@+id/guideline_right"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/request_data"
        tools:text="To alabal@gmail.com 10 e -> 15 e"
        android:gravity="left"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/dark_border"
        app:layout_constraintTop_toBottomOf="@+id/request_data"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/answer_input"
        android:padding="5dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="@color/colorPrimary"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#10000000"
        android:elevation="1dp"
        android:id="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/answer_input"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_add_answer_button_height"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_add_request_cancel_label"
            android:gravity="center"
            android:textSize="@dimen/dialog_add_answer_buttons_text_size"
            android:textColor="@color/colorPrimary"
            android:id="@+id/cancel_button"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_add_request_save_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dialog_add_answer_buttons_text_size" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>